Fix/bug 003 (#37)
* fix/bug-001 : content height doesn't fit screen

* fix/bug-003

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -123,7 +123,7 @@ q {
     right: 0 !important;
   }
 
-  //fix frozen column can't load on scroll
+  //fix frozen column can't load on scroll or when unfrozen
   .e-frozencontent,
   .e-movablecontent {
     height: 101% !important;
@@ -131,5 +131,18 @@ q {
     table {
       height: 100% !important;
     }
+  }
+  .e-gridcontent .e-content {
+    .e-table {
+      height: 101% !important;
+    }
+  }
+
+  .loading {
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 }
