--- a/src/main.scss
+++ b/src/main.scss
@@ -46,3 +46,7 @@
   height: 25px;
   line-height: 25px;
 }
+
+html {
+  overflow: hidden;
+}
